# io-manager

./: .gitignore  IOManager.hs  LICENSE  Makefile  README.md  SECURITY.md  SimpleEchoExample.hs  io-manager.cabal  some_file  stack.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-cabal.yaml  ci-postsubmit.yaml  ci-project-init.yaml  ci-stack.yaml  presubmit-cabal.yaml  presubmit-stack.yaml  release.yaml  scorecards.yaml  static-checks.yaml
Training/MM/: IOManager.hs
simple-echo-example/: SimpleEchoExample.hs
