cabal-version:       3.6
name:                io-manager
version:             0.1.0.4
synopsis:            Skeleton library around the IO monad.
description:         A skeleton library to help learners of Haskell
                     concentrate on the pure-functional aspect and
                     let the IO be handled by the library.

license:             BSD-3-Clause
license-file:        LICENSE

author:              Mihai Maruseac
maintainer:          mihai.maruseac@gmail.com

category:            Training
build-type:          Simple

source-repository head
  type:              git
  location:          https://github.com/mihaimaruseac/io-manager

library
  exposed-modules:   Training.MM.IOManager
  default-language:  Haskell2010
  build-depends:     base,
                     containers

executable SimpleEchoExample
  build-depends:     base < 5,
                     containers,
                     io-manager
  Main-Is:           SimpleEchoExample.hs
  Hs-Source-Dirs:    simple-echo-example
  default-language:  Haskell2010
